# SmartTelegramModerator

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  Smart_Telegram_Moderator_AI_MAX_TZ.txt  docker-compose.yml  pyproject.toml  requirements.txt  ИСТОРИЯ.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  app.py  deps.py  routes.py  schemas.py  security.py
app/bot/: __init__.py  bot.py  commands.py  handlers.py
app/cache/: __init__.py  redis_client.py
app/core/: __init__.py  config.py  exceptions.py  logging.py  metrics.py
app/db/: __init__.py  base.py  models.py
app/ml/: __init__.py  dataset.py  inference.py  preprocess.py  training.py  types.py
app/moderation/: __init__.py  engine.py  filters.py  types.py
app/services/: __init__.py  moderation_service.py  reputation.py  roles.py  stats.py
dashboard/: __init__.py  routes.py  templates.py
docker/: Dockerfile  prometheus.yml
docs/: PLAN.md
tests/: test_api.py  test_bot.py  test_cache.py  test_core.py  test_dashboard.py  test_db.py  test_metrics.py  test_ml.py  test_moderation.py  test_services.py
